--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray_thin">#FFF1F1F1</color>
     <color name="gray_mid">#FF9FA5B4</color>
     <color name="gray_bold">#FF707070</color>
+    <color name="gray_kategori">#FFD3CFCA</color>
 </resources>
