--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -85,9 +85,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="none"
-        app:layout_constraintHeight_percent=".655"
         app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toTopOf="@+id/Navigation"
+        app:layout_constraintBottom_toTopOf="@+id/BarTotal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Header"
