--- a/app/src/main/res/layout/activity_keranjang.xml
+++ b/app/src/main/res/layout/activity_keranjang.xml
@@ -464,11 +464,11 @@
             android:text="@string/total_harga"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
             android:fontFamily="@font/poppins_bold"
+            android:layout_marginTop="10dp"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintTop_toTopOf="@id/btnBeli"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -480,7 +480,6 @@
             android:text="@string/rp_36_000"
             android:textSize="18sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:fontFamily="@font/poppins_bold"
             android:layout_marginTop="33dp"
             app:layout_constraintVertical_bias="0"
@@ -493,7 +492,7 @@
         <ImageView
             android:id="@+id/btnBeli"
             android:layout_width="220dp"
-            android:layout_height="50dp"
+            android:layout_height="38dp"
             android:src="@drawable/ic_btn_rounded"
             app:layout_constraintVertical_bias=".5"
             app:layout_constraintHorizontal_bias="1"
@@ -507,9 +506,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bayar"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:textColor="@color/white"
-            android:textStyle="bold"
             android:textAllCaps="true"
             android:fontFamily="@font/poppins_medium"
             app:layout_constraintVertical_bias=".5"
