--- a/app/src/main/res/layout/activity_keranjang_kosong.xml
+++ b/app/src/main/res/layout/activity_keranjang_kosong.xml
@@ -52,7 +52,7 @@
     <ImageView
         android:id="@+id/BtnBeli"
         android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_height="38dp"
         android:src="@drawable/ic_btn_rounded"
         android:layout_marginTop="25dp"
         app:layout_constraintVertical_bias="0"
@@ -66,11 +66,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/beli"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textColor="@color/white"
         android:textAllCaps="true"
-        android:textStyle="bold"
-        android:letterSpacing=".1"
+        android:letterSpacing=".04"
+        android:fontFamily="@font/poppins_medium"
         app:layout_constraintTop_toTopOf="@+id/BtnBeli"
         app:layout_constraintBottom_toBottomOf="@+id/BtnBeli"
         app:layout_constraintStart_toStartOf="@+id/BtnBeli"
