--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -50,7 +50,7 @@
                 android:text="@string/nama_depan"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Namadepan"
@@ -73,7 +73,7 @@
                 android:text="@string/nama_tengah"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Namatengah"
@@ -96,7 +96,7 @@
                 android:text="@string/nama_belakang"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Namabelakang"
@@ -119,7 +119,7 @@
                 android:text="@string/username"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Username"
@@ -142,7 +142,7 @@
                 android:text="@string/alamat"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Alamat"
@@ -165,7 +165,7 @@
                 android:text="@string/no_telepon"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Notelepon"
@@ -188,7 +188,7 @@
                 android:text="@string/email"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Email"
@@ -211,7 +211,7 @@
                 android:text="@string/kata_sandi"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins_medium" />
+                android:fontFamily="@font/poppins_regular" />
 
             <EditText
                 android:id="@+id/Katasandi"
@@ -234,8 +234,7 @@
                 android:text="@string/masuk_u"
                 android:textSize="16sp"
                 android:textColor="@color/white"
-                android:textStyle="bold"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_bold"
                 android:letterSpacing=".1" />
 
             <Button
