--- a/app/src/main/res/layout/activity_profil_alamat.xml
+++ b/app/src/main/res/layout/activity_profil_alamat.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lazydog"
-    tools:context=".NotifikasiDetailActivity">
+    tools:context=".ProfilAlamatActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Header"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="0dp"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/Navigation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -34,11 +34,11 @@
             tools:ignore="ContentDescription,ImageContrastCheck" />
 
         <TextView
-            android:id="@+id/Keranjang"
+            android:id="@+id/EditProfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
-            android:text="@string/promo_paket_hemat"
+            android:text="@string/alamat"
             android:textAllCaps="true"
             android:textColor="@color/maroon"
             android:textSize="16sp"
@@ -49,95 +49,62 @@
             app:layout_constraintBottom_toBottomOf="@+id/btnBack"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+        
+        <ImageView
+            android:id="@+id/BorderAlamat"
+            android:layout_width="match_parent"
+            android:layout_height="118dp"
+            android:src="@drawable/ic_border_rounded"
+            android:layout_marginTop="35dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintTop_toBottomOf="@id/btnBack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lorem2"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/poppins_regular"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="@id/BorderAlamat"
+            app:layout_constraintBottom_toBottomOf="@id/BorderAlamat"
+            app:layout_constraintStart_toStartOf="@id/BorderAlamat"
+            app:layout_constraintEnd_toEndOf="@id/BorderAlamat"/>
+
+        <ImageView
+            android:id="@+id/BtnEdit"
+            android:layout_width="80dp"
+            android:layout_height="38dp"
+            android:src="@drawable/ic_btn_rounded"
+            android:layout_marginTop="35dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintTop_toBottomOf="@id/BorderAlamat"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/edit"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textAllCaps="true"
+            android:letterSpacing=".04"
+            android:fontFamily="@font/poppins_medium"
+            app:layout_constraintTop_toTopOf="@id/BtnEdit"
+            app:layout_constraintBottom_toBottomOf="@id/BtnEdit"
+            app:layout_constraintStart_toStartOf="@id/BtnEdit"
+            app:layout_constraintEnd_toEndOf="@id/BtnEdit"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scrollbars="none"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toTopOf="@id/Navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Header"
-        tools:ignore="SpeakableTextPresentCheck">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp">
-
-            <ImageView
-                android:id="@+id/Gambar"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="@drawable/ic_rectangle_bg_xl"
-                android:src="@drawable/img_7"
-                android:scaleType="center"
-                android:layout_marginTop="35dp"
-                app:layout_constraintVertical_bias="0"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="ContentDescription"/>
-
-            <ImageView
-                android:id="@+id/BorderRounded"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:src="@drawable/ic_border_rounded"
-                android:layout_marginTop="25dp"
-                app:layout_constraintTop_toBottomOf="@id/Gambar"
-                tools:ignore="ContentDescription"/>
-
-            <TextView
-                android:id="@+id/Teks"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lorem1"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppins_regular"
-                android:padding="12dp"
-                app:layout_constraintTop_toTopOf="@id/BorderRounded"
-                app:layout_constraintTop_toBottomOf="@id/BorderRounded"
-                app:layout_constraintStart_toStartOf="@id/BorderRounded"
-                app:layout_constraintEnd_toEndOf="@id/BorderRounded"/>
-            
-            <ImageView
-                android:id="@+id/BtnCek"
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:src="@drawable/ic_btn_rounded"
-                android:layout_marginTop="35dp"
-                android:layout_marginBottom="20dp"
-                app:layout_constraintVertical_bias="0"
-                app:layout_constraintTop_toBottomOf="@id/BorderRounded"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="ContentDescription"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/cek_sekarang"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textAllCaps="true"
-                android:fontFamily="@font/poppins_medium"
-                android:letterSpacing=".04"
-                app:layout_constraintTop_toTopOf="@id/BtnCek"
-                app:layout_constraintBottom_toBottomOf="@id/BtnCek"
-                app:layout_constraintStart_toStartOf="@id/BtnCek"
-                app:layout_constraintEnd_toEndOf="@id/BtnCek"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Navigation"
@@ -188,7 +155,7 @@
                 android:id="@+id/NavNotification"
                 android:layout_width="30dp"
                 android:layout_height="33dp"
-                android:src="@drawable/ic_nav_notification_active"
+                android:src="@drawable/ic_nav_notification"
                 android:layout_marginStart="72dp"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@+id/NavCart"
@@ -201,7 +168,7 @@
                 android:id="@+id/NavProfile"
                 android:layout_width="30dp"
                 android:layout_height="33dp"
-                android:src="@drawable/ic_nav_profile"
+                android:src="@drawable/ic_nav_profile_active"
                 android:layout_marginStart="72dp"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@+id/NavNotification"
