--- a/app/src/main/res/layout/activity_masuk.xml
+++ b/app/src/main/res/layout/activity_masuk.xml
@@ -8,152 +8,194 @@
     android:background="@color/maroon"
     tools:context=".MasukActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/marina"
-        android:textAllCaps="true"
-        android:textSize="52sp"
-        android:textColor="@color/lazydog"
-        android:fontFamily="@font/minionpro_bold"
-        app:layout_constraintVertical_bias=".1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/minionpro_bold"
-        android:letterSpacing="0.1"
-        android:text="@string/industri"
-        android:textColor="@color/lazydog"
-        android:textSize="25sp"
-        app:layout_constraintVertical_bias=".17"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/Logo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent=".66"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1">
+        app:layout_constraintBottom_toTopOf="@id/Section"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/Selamatdatang"
+            android:id="@+id/Marina"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/marina"
+            android:textAllCaps="true"
+            android:textSize="52sp"
+            android:textColor="@color/lazydog"
+            android:fontFamily="@font/minionpro_bold"
+            android:layout_marginTop="45dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/Industri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/minionpro_bold"
+            android:letterSpacing="0.1"
+            android:text="@string/industri"
+            android:textColor="@color/lazydog"
+            android:textSize="25sp"
+            android:layout_marginTop="55dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintTop_toTopOf="@id/Marina"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/Marina"
+            app:layout_constraintEnd_toEndOf="@id/Marina"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/Section"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        app:layout_constraintHeight_percent=".7"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Logo">
+
+        <TextView
+            android:id="@+id/SelamatDatang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/selamat_datang"
             android:textColor="@color/white"
             android:textSize="23sp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
-            android:orientation="vertical"
-            android:paddingLeft="35dp"
-            android:paddingRight="35dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/labUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
-                android:text="@string/username"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/edit_text_bg"
-                android:inputType="text"
-                android:paddingStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="10dp"
-                android:textColorHint="@color/gray_mid"
-                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
-
-            <TextView
-                android:id="@+id/labKatasandi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="@string/kata_sandi"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/kataSandi"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/edit_text_bg"
-                android:inputType="textPassword"
-                android:paddingStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="10dp"
-                android:textColorHint="@color/gray_mid"
-                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
-
-        </LinearLayout>
-
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/Username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:letterSpacing=".1"
+            android:fontFamily="@font/poppins_regular"
+            android:text="@string/username"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_marginTop="25dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintTop_toBottomOf="@id/SelamatDatang"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/RecUsername"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/RecUsername"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:inputType="text"
+            android:paddingStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:textColorHint="@color/gray_mid"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintTop_toBottomOf="@id/Username"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/KataSandi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="@string/kata_sandi"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintTop_toBottomOf="@id/RecUsername"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/RecUsername"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <EditText
+            android:id="@+id/RecKataSandi"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edit_text_bg"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:textColorHint="@color/gray_mid"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias=".5"
+            app:layout_constraintTop_toBottomOf="@id/KataSandi"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/BtnDaftar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:letterSpacing=".04"
             android:text="@string/daftar_u"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintVertical_bias=".7"
-            app:layout_constraintHorizontal_bias=".1"
+            android:fontFamily="@font/poppins_medium"
+            android:layout_marginTop="35dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintTop_toBottomOf="@id/RecKataSandi"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/RecKataSandi"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Selamatdatang"
             tools:ignore="TextContrastCheck" />
 
-        <Button
-            android:id="@+id/btnMasuk"
+        <ImageView
+            android:id="@+id/BtnMasuk"
+            android:layout_width="100dp"
+            android:layout_height="38dp"
+            android:src="@drawable/ic_btn_daftar"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintTop_toTopOf="@id/BtnDaftar"
+            app:layout_constraintBottom_toBottomOf="@id/BtnDaftar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/RecKataSandi"
+            tools:ignore="ContentDescription"/>
+
+        <TextView
+            android:id="@+id/TextMasuk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/lazydog"
-            android:fontFamily="@font/poppins_bold"
             android:text="@string/masuk"
+            android:textSize="18sp"
             android:textColor="@color/maroon"
-            android:textSize="16sp"
-            app:layout_constraintVertical_bias=".72"
-            app:layout_constraintHorizontal_bias=".89"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Selamatdatang"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:letterSpacing=".04"
+            android:fontFamily="@font/poppins_bold"
+            app:layout_constraintTop_toTopOf="@id/BtnMasuk"
+            app:layout_constraintBottom_toBottomOf="@id/BtnMasuk"
+            app:layout_constraintStart_toStartOf="@id/BtnMasuk"
+            app:layout_constraintEnd_toEndOf="@id/BtnMasuk" />
 
         <TextView
             android:id="@+id/Lewati"
@@ -164,13 +206,13 @@
             android:text="@string/lewati"
             android:textColor="@color/gray_mid"
             android:textSize="16sp"
-            app:layout_constraintVertical_bias=".7"
+            android:layout_marginTop="100dp"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintTop_toBottomOf="@id/BtnDaftar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/btnMasuk"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnMasuk" />
-
+            app:layout_constraintEnd_toEndOf="@id/BtnMasuk" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
