--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -345,6 +345,7 @@
                 tools:ignore="ContentDescription"/>
 
             <TextView
+                android:id="@+id/TextDaftar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/daftar"
