--- a/app/src/main/res/layout/activity_daftar_sukses.xml
+++ b/app/src/main/res/layout/activity_daftar_sukses.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/Logo"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/check_circle"
